基本完成所有功能